[gd_scene load_steps=2 format=3 uid="uid://cws6d7q1et4j5"]

[ext_resource type="Script" path="res://addons/gd_data/scripts/update_line_dialog.gd" id="1_t8rik"]

[node name="UpdateLineDialog" type="ConfirmationDialog"]
title = "Create line"
size = Vector2i(1000, 139)
visible = true
min_size = Vector2i(1000, 70)
ok_button_text = "Create"
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("1_t8rik")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -390.0
offset_bottom = -688.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 976.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 968.0
offset_bottom = 31.0

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/KeyContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 482.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Key"

[node name="KeyEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/KeyContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 486.0
offset_right = 968.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Line name"

[node name="CountContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 35.0
offset_right = 968.0
offset_bottom = 66.0

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/CountContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 482.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Count"

[node name="CountSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/CountContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 486.0
offset_right = 968.0
offset_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0
